Fix T88088: Cycles and Eevee Vector Rotate node inconsistent with zero axis

Pass along the unmodified vector in this case.